--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
 
-  <div id="container">
+  <div id="container gradient">
     <ion-card class="card icon-bg">
       <img src="assets/title.svg" alt="RandomAQ">
     </ion-card>
