--- a/src/global.scss
+++ b/src/global.scss
@@ -25,9 +25,22 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+
 .card {
     background: #FFFFFF;
     box-shadow: 0px 76px 99px rgba(0, 0, 0, 0.1), 0px 22.9118px 29.8456px rgba(0, 0, 0, 0.0651589), 0px 9.51638px 12.3963px rgba(0, 0, 0, 0.05), 0px 3.44189px 4.48351px rgba(0, 0, 0, 0.0348411);
     border-radius: 26px;
     padding: 2em;
+}
+
+.gradient {
+    background: linear-gradient(200.17deg, #C04848 -0.21%, #480048 89.86%);
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
 }
