--- a/src/global.scss
+++ b/src/global.scss
@@ -28,6 +28,14 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+body * {
+    margin: 0;
+    padding: 0;
+}
+
+h1,h2,h3,h4,h5 {
+    font-family: 'Montserrat', sans-serif;
+}
 
 .card {
     background: #FFFFFF;
