--- a/src/app/pages/single-category/single-category.page.html
+++ b/src/app/pages/single-category/single-category.page.html
@@ -5,7 +5,7 @@
         <img class="image" [src]="category.image" [alt]="category.name" />
         <h2>{{category.name}}</h2>
         <p>{{category.description}}</p>
-        <button class="start-btn">Iniciar</button>
+        <button class="start-btn" (click)="start()">Iniciar</button>
       </div>
     </ion-card>
   </div>
