--- a/src/app/pages/question/question.page.html
+++ b/src/app/pages/question/question.page.html
@@ -14,7 +14,8 @@
         </div>
         <app-clock></app-clock>
         <div class="buttons">
-
+          <button class="circle-btn"><img class="image-btn" src="assets/script-x.svg" alt="X" /></button>
+          <button class="circle-btn"><img class="image-btn" src="assets/check-mark.svg" alt="check" /></button>
         </div>
       </div>
     </ion-card>
