--- a/src/app/pages/question/question.page.scss
+++ b/src/app/pages/question/question.page.scss
@@ -41,3 +41,26 @@
     padding-top: 1em;
     padding-bottom: 1em;
 }
+
+.circle-btn {
+    width: 96px;
+    height: 96px;
+    border-radius: 100%;   
+    background: #FFFFFF;
+    border: 8px solid #480048;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.25);
+}
+
+.buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.image-btn {
+    width: 60%;
+}
