--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,7 @@
 
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 body * {
     margin: 0;
