--- a/src/app/pages/question/question.page.scss
+++ b/src/app/pages/question/question.page.scss
@@ -4,6 +4,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
 }
 
 .card {
