--- a/src/app/pages/question/question.page.html
+++ b/src/app/pages/question/question.page.html
@@ -9,13 +9,16 @@
         <div class="question">
           <p>{{question.content}}</p>
         </div>
-        <div class="anwer">
-          
+        <div  *ngIf="!running" class="answer">
+          <h2>{{question.answer}}</h2>
         </div>
-        <app-clock></app-clock>
-        <div class="buttons">
-          <button class="circle-btn"><img class="image-btn" src="assets/script-x.svg" alt="X" /></button>
-          <button class="circle-btn"><img class="image-btn" src="assets/check-mark.svg" alt="check" /></button>
+        <app-clock *ngIf="running" ></app-clock>
+        <div class="buttons" *ngIf="running">
+          <button class="circle-btn"><img class="image-btn" src="assets/script-x.svg" alt="X" (click)="badAnswer()" /></button>
+          <button class="circle-btn"><img class="image-btn" src="assets/check-mark.svg" alt="check" (click)="coolAnswer()" /></button>
+        </div>
+        <div class="buttons" *ngIf="!running">
+          <button class="circle-btn"><img class="image-btn" src="assets/script-x.svg" alt="X" (click)="back()" /></button>
         </div>
       </div>
     </ion-card>
