--- a/src/app/pages/question/clock/clock.component.html
+++ b/src/app/pages/question/clock/clock.component.html
@@ -1,1 +1,1 @@
-<h1>{{minutes<10?'0'+minutes:minutes}}:{{seconds}}</h1>
+<h1>{{minutes<10?'0'+minutes:minutes}}:{{seconds<10?'0'+seconds:seconds}}</h1>
