--- a/src/app/pages/question/question.page.scss
+++ b/src/app/pages/question/question.page.scss
@@ -15,6 +15,16 @@
     justify-content: space-around;
 }
 
+.answer {
+    width: 100%;
+    text-align: center;
+}
+
+.answer h2 {
+    text-align: center;
+    font-weight: bold;
+}
+
 .card {
     width: 90%;
     height: 90%;
