--- a/src/app/pages/categories/categories.page.scss
+++ b/src/app/pages/categories/categories.page.scss
@@ -35,7 +35,7 @@
 }
 
 .card h3 {
-    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
     text-align: center;
     font-weight: bold;
 }
