--- a/admin-app/src/app/components/login/login.component.html
+++ b/admin-app/src/app/components/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="container-all center-content gradient">
+    <mat-card class="center-content">
+        <mat-card-header class="center-content">
+            <img class="image" src="assets/img/title.svg" alt="randomAQ" />
+
+        </mat-card-header>
+        <mat-card-content>
+            <form>
+                <mat-form-field appearance="outline">
+                    <mat-label>User</mat-label>
+                    <mat-icon matPrefix>account_circle</mat-icon>
+                    <input matInput type="text" placeholder="User">
+                    <mat-hint>User is required</mat-hint>
+                  </mat-form-field>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <mat-icon matPrefix>password</mat-icon>
+                    <input matInput type="text" placeholder="Password">
+                    <mat-hint>Password is required</mat-hint>
+                  </mat-form-field>
+                  <button class="btn-submit" mat-raised-button color="primary">Iniciar Sesión</button>
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
