--- a/admin-app/src/app/admin/components/home/home.component.html
+++ b/admin-app/src/app/admin/components/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="container-all gradient">
+    <mat-toolbar class="menu">
+        <img class="image" src="assets/img/title-white.svg" alt="randomAQ" />
+        <ul class="right-menu">
+            <li><a>Categorias</a></li>
+            <li><a>Preguntas</a></li>
+            <li>
+                <button mat-icon-button aria-label="exit button" matTooltip="Exit">
+                    <mat-icon>logout</mat-icon>
+                  </button>
+            </li>
+        </ul>
+    </mat-toolbar>
+      
+</div>
