--- a/admin-app/src/app/admin/components/home/home.component.html
+++ b/admin-app/src/app/admin/components/home/home.component.html
@@ -2,13 +2,9 @@
     <mat-toolbar class="menu">
         <img class="image" src="assets/img/title-white.svg" alt="randomAQ" />
         <ul class="right-menu">
-            <li><a>Categorias</a></li>
-            <li><a>Preguntas</a></li>
-            <li>
-                <button mat-icon-button aria-label="exit button" matTooltip="Exit">
-                    <mat-icon>logout</mat-icon>
-                  </button>
-            </li>
+            <li><a><mat-icon>category</mat-icon>Categories</a></li>
+            <li><a><mat-icon>help</mat-icon>Questions</a></li>
+            <li><a><mat-icon>logout</mat-icon>Exit</a></li>
         </ul>
     </mat-toolbar>
       
