--- a/admin-app/src/app/admin/components/home/home.component.scss
+++ b/admin-app/src/app/admin/components/home/home.component.scss
@@ -2,8 +2,8 @@
     background-color: transparent;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     justify-content: space-between;
+    
     .image {
         width: 15%;
     }
@@ -22,19 +22,26 @@
 .right-menu {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     list-style: none;
 
     li {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 10px;
+        padding: 10px 20px 10px 20px;
         margin: 0;
         a {
-            
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-decoration: none;
             color: white;
+            font-weight: lighter;
+            font-size: 20px;
+
+            mat-icon {
+                padding-right: 5px;
+            }
         }
 
         a:hover {
@@ -47,4 +54,45 @@
     }
 
 
+}
+
+
+@media  only screen and (max-width:768px){
+
+    .right-menu li > a {
+        font-size: 17px;
+    }
+
+    .menu .image {
+        width: 20%;
+    }
+    
+}
+
+@media  only screen and (max-width:665px){
+
+    .right-menu li > a {
+        font-size: 15px;
+    }
+
+
+    .menu .image {
+        width: 25%;
+    }
+    
+}
+
+
+
+@media  only screen and (max-width:575px){
+
+    .right-menu {
+        display: none;
+    }
+
+
+    .menu .image {
+        width: 35%;
+    }
+    
 }
