--- a/admin-app/src/app/admin/components/home/home.component.scss
+++ b/admin-app/src/app/admin/components/home/home.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
+    height: 10vh;
     .image {
         width: 15%;
     }
@@ -17,7 +17,53 @@
         color: white;
     }
 
+    .menu-mobile {
+        display: none;
+        padding-right: 5px;
+        mat-icon {
+            font-size: 35px;
+            width: 35px;
+            height: 35px;
+        }
+    }
+
 }
+
+.drawer-container {
+    width: 100%;
+    height: 90vh;
+    background-color: transparent;
+}
+
+.drawer-mobile {
+    width: 100%;
+    background-color: transparent;
+
+    a {
+        color: white;
+        font-weight: lighter;
+        font-size: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        mat-icon {
+            padding-right: 5px;
+        }
+    }
+
+    a:hover{
+        background-color: #ffffff14;
+    }
+
+}
+
+
+  
+  mat-drawer-content {
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
 .right-menu {
     display: flex;
@@ -90,9 +136,20 @@
         display: none;
     }
 
+    .menu .menu-mobile{
+        display: block;
+    }
 
     .menu .image {
         width: 35%;
+    }
+    
+}
+
+@media  only screen and (max-width:425px){
+
+    .menu .image {
+        width: 50%;
     }
     
 }
