--- a/admin-app/src/app/admin/components/home/home.component.html
+++ b/admin-app/src/app/admin/components/home/home.component.html
@@ -6,6 +6,21 @@
             <li><a><mat-icon>help</mat-icon>Questions</a></li>
             <li><a><mat-icon>logout</mat-icon>Exit</a></li>
         </ul>
+        <a class="menu-mobile" (click)="drawer.toggle()"><mat-icon>menu</mat-icon></a>
     </mat-toolbar>
-      
+    <mat-drawer-container class="drawer-container" [hasBackdrop]="true">
+        <mat-drawer class="drawer-mobile" #drawer mode="over">
+            <!----------menu mobile------->
+            <mat-nav-list>
+              <a mat-list-item ><mat-icon>category</mat-icon>Categories</a>
+              <a mat-list-item ><mat-icon>help</mat-icon>Questions</a>
+              <a mat-list-item ><mat-icon>logout</mat-icon>Exit</a>
+           </mat-nav-list>
+
+        </mat-drawer>
+        
+        <mat-drawer-content>
+          <!----content----->
+        </mat-drawer-content>
+      </mat-drawer-container>  
 </div>
