padding and border-radius of card

--- a/admin-app/src/app/components/login/login.component.scss
+++ b/admin-app/src/app/components/login/login.component.scss
@@ -27,7 +27,7 @@ form mat-form-field {
 
 .btn-submit {
     padding-top: 1em;
-    padding-bottom: 5px;
+    padding-bottom: 1em;
 }
 
 @media  only screen and (max-width:546px) {
