--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -18,3 +18,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     justify-content: center;
     align-items: center;
 }
+
+.mat-card {
+    border-radius: 16px !important;
+}
