--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -1,1 +1,5 @@
-<p>list-categories works!</p>
+<div class="options">
+    <button mat-fab color="accent" aria-label="">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
