--- a/admin-app/src/app/admin/components/home/home.component.html
+++ b/admin-app/src/app/admin/components/home/home.component.html
@@ -21,6 +21,9 @@
         
         <mat-drawer-content>
           <!----content----->
+          <mat-card class="card">
+            <router-outlet></router-outlet>
+          </mat-card>
         </mat-drawer-content>
       </mat-drawer-container>  
 </div>
