--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -1,5 +1,51 @@
 <div class="options">
-    <button mat-fab color="accent" aria-label="">
+    <button mat-fab color="accent" aria-label="" matTooltip="New Category">
       <mat-icon>add</mat-icon>
     </button>
-  </div>
+</div>
+<div class="table-responsive">
+  <table mat-table [dataSource]="datasource">
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element" style="width: 10%;"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- image Column -->
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef> Image </th>
+      <td mat-cell *matCellDef="let element" style="width: 10%;"> <img [src]="element.image" alt="image" class="image-element" /> </td>
+    </ng-container>
+    
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description | shortDescription}} </td>
+    </ng-container>
+
+  
+    <!-- options Column -->
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef> Options </th>
+      <td mat-cell *matCellDef="let element"  style="width: 15%;"> 
+        <div class="row-buttons">
+          <button mat-icon-button color="accent" aria-label="See Category" matTooltip="See CAtegory">
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button mat-icon-button color="accent" aria-label="Update Category" matTooltip="Update CAtegory">
+            <mat-icon>mode_edit</mat-icon>
+          </button>
+  
+          <button mat-icon-button color="accent" aria-label="Delete category" matTooltip="Delete Category">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
