--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -30,9 +30,6 @@
       <th mat-header-cell *matHeaderCellDef> Options </th>
       <td mat-cell *matCellDef="let element"  style="width: 15%;"> 
         <div class="row-buttons">
-          <button mat-icon-button color="accent" aria-label="See Category" matTooltip="See CAtegory">
-            <mat-icon>visibility</mat-icon>
-          </button>
           <button mat-icon-button color="accent" aria-label="Update Category" matTooltip="Update CAtegory">
             <mat-icon>mode_edit</mat-icon>
           </button>
@@ -47,5 +44,7 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
   </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
 </div>
