--- a/admin-app/src/app/admin/components/categories/new-update-category/new-update-category.component.html
+++ b/admin-app/src/app/admin/components/categories/new-update-category/new-update-category.component.html
@@ -1,1 +1,31 @@
-<p>new-update-category works!</p>
+<h1 mat-dialog-title><mat-icon>category</mat-icon> Category</h1>
+<mat-dialog-content>
+    <form [formGroup]="categoryForm">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Name </mat-label>
+            <input matInput type="text" placeholder="Name" required formControlName="name">
+            <mat-error>Name is required</mat-error>
+          </mat-form-field>
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Description </mat-label>
+            <textarea matInput placeholder="Description" formControlName="description"> </textarea>
+          </mat-form-field>
+
+          <mat-form-field  class="full-width" appearance="outline">
+            <mat-label>Image</mat-label>
+            <mat-select required formControlName="image">
+                <mat-option *ngFor="let item of images" [value]="item.id">
+                    <div class="select-container">
+                        <img class="select-img" [src]="item.url" alt="{{item.name}}" />
+                        {{item.name}}
+                    </div>
+                </mat-option>
+              </mat-select>
+              <mat-error>Image is required</mat-error>
+          </mat-form-field>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions class="modal-buttons">
+    <button mat-button color="accent" mat-dialog-close>Cancel</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="categoryForm.invalid" (click)="save()">Create</button>
+  </mat-dialog-actions>
