--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -22,3 +22,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-card {
     border-radius: 16px !important;
 }
+
+.full-width {
+    width: 100%;
+}
+
+.modal-buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+
+    button{
+        width: 20%;
+    }
+}
