--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -9,7 +9,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element" style="width: 10%;"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element" style="width: 10%;"> <a class="link" (click)="seeCategory(element)" >{{element.name}}</a> </td>
     </ng-container>
 
     <!-- image Column -->
@@ -30,7 +30,7 @@
       <th mat-header-cell *matHeaderCellDef> Options </th>
       <td mat-cell *matCellDef="let element"  style="width: 15%;"> 
         <div class="row-buttons">
-          <button mat-icon-button color="accent" aria-label="Update Category" matTooltip="Update CAtegory">
+          <button mat-icon-button color="accent" aria-label="Update Category" matTooltip="Update CAtegory" (click)="updateCategory(element)">
             <mat-icon>mode_edit</mat-icon>
           </button>
   
