--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -30,7 +30,7 @@
       <th mat-header-cell *matHeaderCellDef> Options </th>
       <td mat-cell *matCellDef="let element"  style="width: 15%;"> 
         <div class="row-buttons">
-          <button mat-icon-button color="accent" aria-label="Update Category" matTooltip="Update CAtegory" (click)="updateCategory(element)">
+          <button mat-icon-button color="accent" aria-label="Update Category" matTooltip="Update Category" (click)="updateCategory(element)">
             <mat-icon>mode_edit</mat-icon>
           </button>
   
