--- a/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
+++ b/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
@@ -1,1 +1,45 @@
-<p>list-questions works!</p>
+<div class="options">
+    <button mat-fab color="accent" aria-label="" matTooltip="New Question" (click)="newQuestion()">
+      <mat-icon>add</mat-icon>
+    </button>
+</div>
+<div class="table-responsive">
+  <table mat-table [dataSource]="datasource">
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="content">
+      <th mat-header-cell *matHeaderCellDef> Question </th>
+      <td mat-cell *matCellDef="let element"> <a class="link" (click)="seeQuestion(element)" 
+        >{{element.content}}</a> </td>
+    </ng-container>
+    
+    <!-- Description Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef> Category </th>
+      <td mat-cell *matCellDef="let element"> {{element.category.name}} </td>
+    </ng-container>
+
+  
+    <!-- options Column -->
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef> Options </th>
+      <td mat-cell *matCellDef="let element"  style="width: 15%;"> 
+        <div class="row-buttons">
+          <button mat-icon-button color="accent" aria-label="Update Question" matTooltip="Update Question" (click)="updateQuestion(element)">
+            <mat-icon>mode_edit</mat-icon>
+          </button>
+  
+          <button mat-icon-button color="accent" aria-label="Delete Question" matTooltip="Delete Question">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+  </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+</div>
