--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -34,7 +34,7 @@
             <mat-icon>mode_edit</mat-icon>
           </button>
   
-          <button mat-icon-button color="accent" aria-label="Delete category" matTooltip="Delete Category">
+          <button mat-icon-button color="accent" aria-label="Delete category" matTooltip="Delete Category" (click)="deleteCategory(element.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
