--- a/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
+++ b/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
@@ -29,7 +29,7 @@
             <mat-icon>mode_edit</mat-icon>
           </button>
   
-          <button mat-icon-button color="accent" aria-label="Delete Question" matTooltip="Delete Question">
+          <button mat-icon-button color="accent" aria-label="Delete Question" matTooltip="Delete Question" (click)="deleteQuestion(element.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
