--- a/admin-app/src/app/admin/components/home/home.component.html
+++ b/admin-app/src/app/admin/components/home/home.component.html
@@ -2,9 +2,9 @@
     <mat-toolbar class="menu">
         <img class="image" src="assets/img/title-white.svg" alt="randomAQ" />
         <ul class="right-menu">
-            <li><a><mat-icon>category</mat-icon>Categories</a></li>
-            <li><a><mat-icon>help</mat-icon>Questions</a></li>
-            <li><a><mat-icon>logout</mat-icon>Exit</a></li>
+            <li><a routerLink="/admin/categories"><mat-icon>category</mat-icon>Categories</a></li>
+            <li><a routerLink="/admin/questions"><mat-icon>help</mat-icon>Questions</a></li>
+            <li><a (click)="logout()" class="clickable"><mat-icon>logout</mat-icon>Exit</a></li>
         </ul>
         <a class="menu-mobile" (click)="drawer.toggle()"><mat-icon>menu</mat-icon></a>
     </mat-toolbar>
@@ -12,9 +12,9 @@
         <mat-drawer class="drawer-mobile" #drawer mode="over">
             <!----------menu mobile------->
             <mat-nav-list>
-              <a mat-list-item ><mat-icon>category</mat-icon>Categories</a>
-              <a mat-list-item ><mat-icon>help</mat-icon>Questions</a>
-              <a mat-list-item ><mat-icon>logout</mat-icon>Exit</a>
+              <a mat-list-item routerLink="/admin/categories" ><mat-icon>category</mat-icon>Categories</a>
+              <a mat-list-item routerLink="/admin/questions" ><mat-icon>help</mat-icon>Questions</a>
+              <a mat-list-item (click)="logout()" ><mat-icon>logout</mat-icon>Exit</a>
            </mat-nav-list>
 
         </mat-drawer>
