--- a/admin-app/src/app/components/login/login.component.html
+++ b/admin-app/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
 
         </mat-card-header>
         <mat-card-content>
-            <form>
+            <form (ngSubmit)="login()">
                 <mat-form-field appearance="outline">
                     <mat-label>User</mat-label>
                     <mat-icon matPrefix>account_circle</mat-icon>
