--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -13,6 +13,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 }
 
+.clickable:hover {
+    cursor: pointer;
+}
+
 .center-content {
     display: flex;
     justify-content: center;
