angular custom theme

--- a/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
+++ b/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
@@ -1,5 +1,5 @@
 <div class="options">
-    <button mat-fab color="accent" aria-label="" matTooltip="New Question" (click)="newQuestion()">
+    <button mat-fab color="primary" aria-label="" matTooltip="New Question" (click)="newQuestion()">
       <mat-icon>add</mat-icon>
     </button>
 </div>
