--- a/admin-app/src/app/components/login/login.component.html
+++ b/admin-app/src/app/components/login/login.component.html
@@ -10,13 +10,13 @@
                     <mat-label>User</mat-label>
                     <mat-icon matPrefix>account_circle</mat-icon>
                     <input matInput type="text" placeholder="User">
-                    <mat-hint>User is required</mat-hint>
+                    <mat-error>User is required</mat-error>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
                     <mat-icon matPrefix>password</mat-icon>
                     <input matInput type="text" placeholder="Password">
-                    <mat-hint>Password is required</mat-hint>
+                    <mat-error>Password is required</mat-error>
                   </mat-form-field>
                   <button class="btn-submit" mat-raised-button color="primary">Iniciar Sesión</button>
             </form>
