--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -1,5 +1,5 @@
 <div class="options">
-    <button mat-fab color="accent" aria-label="" matTooltip="New Category" (click)="newCategory()">
+    <button mat-fab color="primary" aria-label="" matTooltip="New Category" (click)="newCategory()">
       <mat-icon>add</mat-icon>
     </button>
 </div>
