--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -46,6 +46,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .link {
     color: #480048;
     font-weight: bold;
+    text-decoration: none;
 }
 
 .link:hover {
