--- a/admin-app/src/app/components/register/register.component.html
+++ b/admin-app/src/app/components/register/register.component.html
@@ -10,25 +10,30 @@
                     <mat-label>User</mat-label>
                     <mat-icon matPrefix>account_circle</mat-icon>
                     <input matInput type="text" placeholder="User" formControlName="username" required>
-                    <mat-error>User is required</mat-error>
+                    <mat-error  *ngIf="isError('username','required')">User is required</mat-error>
+                    <mat-error  *ngIf="isError('username','minlength')">User minimun length is 4</mat-error>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
                     <mat-icon matPrefix>alternate_email</mat-icon>
                     <input matInput type="email" placeholder="Email" formControlName="email" required>
-                    <mat-error>Email is required</mat-error>
+                      <mat-error *ngIf="isError('email','required')">Email is required</mat-error>
+                      <mat-error *ngIf="isError('email','email')">Email is not valid</mat-error>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
                     <mat-icon matPrefix>password</mat-icon>
                     <input matInput type="password" placeholder="Password" formControlName="password" required>
-                    <mat-error>Password is required</mat-error>
+                    <mat-error *ngIf="isError('password','required')">Password is required</mat-error>
+                    <mat-error *ngIf="isError('password','minlength')">Password minimun length is 8</mat-error>
+                    <mat-error *ngIf="isError('password','pattern')">Password must have at least one uppercase and one lowercase letter  </mat-error>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Confirm Password</mat-label>
                     <mat-icon matPrefix>password</mat-icon>
                     <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword" required>
-                    <mat-error>Confirm password is required</mat-error>
+                    <mat-error *ngIf="isError('confirmPassword','required')">Confirm password is required</mat-error>
+                    <mat-error *ngIf="isError('confirmPassword','PasswordValidator')">Confirm password not matching with password</mat-error>
                   </mat-form-field>
                   <button type="submit" class="btn-submit" mat-raised-button color="primary">Create Account</button>
             </form>
