--- a/admin-app/src/app/components/register/register.component.html
+++ b/admin-app/src/app/components/register/register.component.html
@@ -10,8 +10,9 @@
                     <mat-label>User</mat-label>
                     <mat-icon matPrefix>account_circle</mat-icon>
                     <input matInput type="text" placeholder="User" formControlName="username" required>
-                    <mat-error  *ngIf="isError('username','required')">User is required</mat-error>
-                    <mat-error  *ngIf="isError('username','minlength')">User minimun length is 4</mat-error>
+                    <mat-error  *ngIf="isError('username','required')">Username is required</mat-error>
+                    <mat-error  *ngIf="isError('username','minlength')">Username minimun length is 4</mat-error>
+                    <mat-error  *ngIf="isError('username','usernameAlreadyExists')">Username already exists</mat-error>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
