--- a/admin-app/src/app/components/login/login.component.scss
+++ b/admin-app/src/app/components/login/login.component.scss
@@ -11,6 +11,13 @@ mat-card {
     width: 50%;
 }
 
+.error-msg {
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-style: oblique;
+}
+
 form {
     padding-top: 2em;
     padding-bottom: 2em;
