add forgot password component

--- a/admin-app/src/app/components/register/register.component.html
+++ b/admin-app/src/app/components/register/register.component.html
@@ -39,6 +39,7 @@
                   <button type="submit" class="btn-submit" mat-raised-button color="primary">Create Account</button>
             </form>
             <p style="text-align: center;">Already have an account? <a class="link" routerLink="/login">Sign In</a></p>
-        </mat-card-content>
+            <p style="text-align: center;">Forgot password? <a class="link" routerLink="/recover-password">Recover Password</a></p>
+          </mat-card-content>
     </mat-card>
 </div>
