--- a/admin-app/src/app/components/forgot-password/forgot-password.component.html
+++ b/admin-app/src/app/components/forgot-password/forgot-password.component.html
@@ -13,7 +13,7 @@
                     <mat-error>User is required</mat-error>
                   </mat-form-field>
 
-                  <button class="btn-submit" mat-raised-button color="primary">Recover Password</button>
+                  <button class="btn-submit" mat-raised-button color="primary">Reset Password</button>
             </form>
             <p style="text-align: center;">No account? <a class="link" routerLink="/register">Create One</a></p>
             <p style="text-align: center;">Already have an account? <a class="link" routerLink="/login">Sign In</a></p>
