--- a/admin-app/src/app/components/login/login.component.html
+++ b/admin-app/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
                   <button class="btn-submit" mat-raised-button color="primary">Sign In</button>
             </form>
             <p style="text-align: center;">No account? <a class="link" routerLink="/register">Create One</a></p>
-            <p style="text-align: center;">Forgot password? <a class="link" routerLink="/recover-password">Recover Password</a></p>
+            <p style="text-align: center;">Forgot password? <a class="link" routerLink="/recover-password">Reset Password</a></p>
         </mat-card-content>
     </mat-card>
 </div>
