--- a/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
+++ b/admin-app/src/app/admin/components/questions/list-questions/list-questions.component.html
@@ -16,7 +16,7 @@
     <!-- Description Column -->
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef> Category </th>
-      <td mat-cell *matCellDef="let element"> {{element.category.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.category?.name || ''}} </td>
     </ng-container>
 
   
