login and register loading

--- a/admin-app/src/app/components/login/login.component.html
+++ b/admin-app/src/app/components/login/login.component.html
@@ -26,5 +26,6 @@
             <p style="text-align: center;">No account? <a class="link" routerLink="/register">Create One</a></p>
             <p style="text-align: center;">Forgot password? <a class="link" routerLink="/recover-password">Reset Password</a></p>
         </mat-card-content>
+        <ngx-spinner type = "ball-scale-pulse" [fullScreen]="false"></ngx-spinner>
     </mat-card>
 </div>
