--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -53,3 +53,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     cursor: pointer;
     color: #C04848;
 }
+.ngx-spinner-overlay {
+    border-radius: 15px !important;
+}
