--- a/admin-app/src/app/components/register/register.component.html
+++ b/admin-app/src/app/components/register/register.component.html
@@ -41,5 +41,6 @@
             <p style="text-align: center;">Already have an account? <a class="link" routerLink="/login">Sign In</a></p>
             <p style="text-align: center;">Forgot password? <a class="link" routerLink="/recover-password">Reset Password</a></p>
           </mat-card-content>
+          <ngx-spinner type = "ball-scale-pulse" [fullScreen]="false"></ngx-spinner>
     </mat-card>
 </div>
