--- a/admin-app/src/app/components/login/login.component.html
+++ b/admin-app/src/app/components/login/login.component.html
@@ -9,17 +9,16 @@
                 <mat-form-field appearance="outline">
                     <mat-label>User</mat-label>
                     <mat-icon matPrefix>account_circle</mat-icon>
-                    <input required matInput type="text" placeholder="User" formControlName="username" (focus)="errorMessage = null;" >
+                    <input required matInput type="text" placeholder="User" formControlName="username" >
                     <mat-error>User is required</mat-error>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
                     <mat-icon matPrefix>password</mat-icon>
-                    <input required matInput type="password" placeholder="Password" formControlName="password" (focus)="errorMessage = null;">
+                    <input required matInput type="password" placeholder="Password" formControlName="password">
                     <mat-error *ngIf="isError('password','required')">Password is required</mat-error>
                     <mat-error *ngIf="isError('password','minlength')">Password minimun length is 6</mat-error>
                   </mat-form-field>
-                  <mat-error class="error-msg" *ngIf="errorMessage">{{errorMessage}}</mat-error>
 
                   <button class="btn-submit" mat-raised-button color="primary">Sign In</button>
             </form>
