--- a/admin-app/src/app/components/forgot-password/forgot-password.component.html
+++ b/admin-app/src/app/components/forgot-password/forgot-password.component.html
@@ -5,19 +5,34 @@
 
         </mat-card-header>
         <mat-card-content>
-            <form [formGroup]="recoverForm" (ngSubmit)="submit()">
+            <form (ngSubmit)="submit()">
                 <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <mat-icon matPrefix>alternate_email</mat-icon>
-                    <input required matInput type="text" placeholder="Email" formControlName="email" >
-                    <mat-error>User is required</mat-error>
+                    <mat-label>Username</mat-label>
+                    <mat-icon matPrefix>account_circle</mat-icon>
+                    <input required matInput type="text" placeholder="Username" [formControl]="username" name="username">
+                    <mat-error>Username is required</mat-error>
                   </mat-form-field>
 
+                <mat-form-field *ngIf="isRecovering" class="full-width" appearance="outline">
+                    <mat-label>Code</mat-label>
+                    <mat-icon matPrefix>vpn_key</mat-icon>
+                    <input required matInput type="text" placeholder="Code" [formControl]="code" name="code" >
+                    <mat-error>Code is required</mat-error>
+                </mat-form-field>
+
+                  <mat-form-field *ngIf="isRecovering" appearance="outline">
+                    <mat-label>New Password</mat-label>
+                    <mat-icon matPrefix>password</mat-icon>
+                    <input required matInput type="password" placeholder="Password" [formControl]="password" name="password">
+                    <mat-error *ngIf="password.errors && password.errors.required">Password is required</mat-error>
+                    <mat-error *ngIf="password.errors && password.errors.minlength">Password minimun length is 6</mat-error>
+                  </mat-form-field>
                   <button class="btn-submit" mat-raised-button color="primary">Reset Password</button>
             </form>
             <p style="text-align: center;">No account? <a class="link" routerLink="/register">Create One</a></p>
             <p style="text-align: center;">Already have an account? <a class="link" routerLink="/login">Sign In</a></p>
 
         </mat-card-content>
+        <ngx-spinner type = "ball-scale-pulse" [fullScreen]="false"></ngx-spinner>
     </mat-card>
 </div>
