--- a/admin-app/src/app/components/register/register.component.html
+++ b/admin-app/src/app/components/register/register.component.html
@@ -7,9 +7,9 @@
         <mat-card-content>
             <form [formGroup]="registerForm" (ngSubmit)="register()">
                 <mat-form-field appearance="outline">
-                    <mat-label>User</mat-label>
+                    <mat-label>Username</mat-label>
                     <mat-icon matPrefix>account_circle</mat-icon>
-                    <input matInput type="text" placeholder="User" formControlName="username" required>
+                    <input matInput type="text" placeholder="Username" formControlName="username" required>
                     <mat-error  *ngIf="isError('username','required')">Username is required</mat-error>
                     <mat-error  *ngIf="isError('username','minlength')">Username minimun length is 4</mat-error>
                     <mat-error  *ngIf="isError('username','usernameAlreadyExists')">Username already exists</mat-error>
@@ -39,7 +39,7 @@
                   <button type="submit" class="btn-submit" mat-raised-button color="primary">Create Account</button>
             </form>
             <p style="text-align: center;">Already have an account? <a class="link" routerLink="/login">Sign In</a></p>
-            <p style="text-align: center;">Forgot password? <a class="link" routerLink="/recover-password">Reset Password</a></p>
+            <p style="text-align: center;">Forgot password? <a class="link" routerLink="/reset-password">Reset Password</a></p>
           </mat-card-content>
           <ngx-spinner type = "ball-scale-pulse" [fullScreen]="false"></ngx-spinner>
     </mat-card>
