--- a/admin-app/src/app/admin/components/home/home.component.scss
+++ b/admin-app/src/app/admin/components/home/home.component.scss
@@ -37,7 +37,7 @@
 
 .drawer-mobile {
     width: 100%;
-    background-color: transparent;
+    background-color: #000000ba;
 
     a {
         color: white;
