--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -25,6 +25,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-card {
     border-radius: 16px !important;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .full-width {
