--- a/admin-app/src/styles.scss
+++ b/admin-app/src/styles.scss
@@ -58,3 +58,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .ngx-spinner-overlay {
     border-radius: 15px !important;
 }
+
+
+
+@media  only screen and (max-width:430px){
+
+    .cdk-overlay-pane {
+        width: 100% !important; 
+    }
+    
+}
