--- a/ionic-app/src/app/pages/single-category/single-category.page.html
+++ b/ionic-app/src/app/pages/single-category/single-category.page.html
@@ -7,6 +7,7 @@
         <p>{{category.description}}</p>
         <h3 style="padding-top: 15px;"  *ngIf="nothaveQuestions">No hay preguntas en esta categoría</h3>
         <button *ngIf="!nothaveQuestions" class="start-btn" (click)="start()">Iniciar</button>
+        <button *ngIf="nothaveQuestions" class="start-btn" (click)="back()">Volver</button>
       </div>
     </ion-card>
   </div>
