--- a/ionic-app/src/app/pages/single-category/single-category.page.scss
+++ b/ionic-app/src/app/pages/single-category/single-category.page.scss
@@ -9,6 +9,7 @@
 .card {
     width: 90%;
     height: 90%;
+    overflow-y: auto;
 }
 
 .image {
@@ -47,3 +48,16 @@
     font-size: 20px;
     margin-top: 2em;
 }
+
+@media screen and (min-width:768px) {
+    .image {
+        width: 40%;
+    }   
+}
+
+@media screen and (min-width:1024px) {
+    .image {
+        width: 30%;
+    }  
+}
+
