add auth to users and expired token

--- a/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
+++ b/admin-app/src/app/admin/components/categories/list-categories/list-categories.component.html
@@ -11,7 +11,7 @@
     mode="indeterminate">
   </mat-progress-spinner>
 </div>
-  <table mat-table [dataSource]="datasource">
+  <table *ngIf="!loading"  mat-table [dataSource]="datasource">
   
     <!-- Name Column -->
     <ng-container matColumnDef="name">
