--- a/admin-app/src/app/admin/components/categories/single-category/single-category.component.html
+++ b/admin-app/src/app/admin/components/categories/single-category/single-category.component.html
@@ -34,3 +34,4 @@
     <button *ngIf="status == 2" mat-raised-button color="primary" type="submit" (click)="update()">Update</button>
     <button *ngIf="status == 1" mat-raised-button color="primary" type="submit" [disabled]="categoryForm.invalid" (click)="save()">Create</button>
   </mat-dialog-actions>
+  <ngx-spinner type = "ball-scale-pulse" [fullScreen]="false"></ngx-spinner>
